<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fish for Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fish">Fish</string>
    <string name="provider_error">Couldn\'t access network- or Wi-Fi-based location information!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="begin_session">Begin New Session</string>
    <string name="location_text_text">Location</string>
    <string name="spacer"></string>
    <string name="date_text_text">Date</string>
    <string name="start_time_text_text">Start Time</string>
    <string name="start_date_text_text">Start Date</string>
    <string name="end_time_text_text">End Time</string>
    <string name="total_fish_caught_text_text">Total Fish Caught</string>
    <string name="num_anglers_text_text">Number of Anglers in Area</string>
    <string name="num_contributing_anglers_text_text">Number of Contributing Anglers</string>
    <string name="num_rods_text_text">Number of Rods</string>
    <string name="optional_session_begin_text_text">Optional Sessional Data</string>
    <string name="submit_new_session_data_button_text">Begin Session</string>
    <string name="num_anglers_edit_text">Can be added later</string>
    <string name="number_contributing_anglers_edit_text">Can be added later</string>
    <string name="estimate">Estimate</string>
    <string name="num_catches_text_text">Number of Fish Caught</string>
    <string name="num_fish_text_text">Number of Fish Caught</string>
    <string name="edited">Edited</string>
    <string name="back_session">Back to Session</string>
    <string name="edit_session_button_text">Edit Session Data</string>
    <string name="end_session_button_text">End Sesssion</string>
    <string name="submit_fish_button_text">Submit Fish</string>
    <string name="complete_session_button">End Session</string>
    <string name="save_changes_button_text">Save</string>
    <string name="species_text_text">Species</string>
    <string name="tagged_text_text">Tagged</string>
    <string name="tagged_id_text_text">Tag ID</string>
    <string name="tagged_colour_text_text">Colour</string>
    <string name="tagged_scale_text_text">Scale Sample</string>
    <string name="fish_length_text_text">Fish Length (cm)</string>
    <string name="fish_condition_text_text">Fish Caught Condition</string>
    <string name="fish_release_condition_text_text">Fish Release Condition</string>
    <string name="save_fish_button_text">Save Fish</string>
    <string name="colour_warning_text_text">That is not a colour for the selected species</string>
    <string name="fish_condition_warning_text_text">Fish Condition Warning</string>
    <string name="fish_length_warning_text_text">That is not an appropriate length for the species</string>
    <string name="login_warning_text">You haven\'t logged in. Sessions recorded while not logged in will be stored on your device and submitted once you log in.</string>
    <string name="login_dialog_title">Logging in&#8230;</string>
    <string name="login_dialog_message">Please wait while logging in.</string>
    <string name="login_text_text">Login</string>
    <string name="pass_text_text">Password</string>
    <string name="back_from_login_button_text">Back</string>
    <string name="login_button_text">Login</string>
    <string name="logged_in_text">Logged in as &#8220;%s&#8221;.</string>
    <string name="logout_button_text">Logout</string>

</resources>